# sneak

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml  rustfmt.toml
src/: lib.rs  openat2.rs
